默认回车发送

--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -39,6 +39,36 @@
     border: 0;
   }
 }
+.doff {
+  margin-top: 10px;
+  font-size: 14px;
+  border-radius: 10px;
+  padding: 5px 10px;
+  width: 70px;
+  color: #f8d806;
+  cursor: pointer;
+  background-color: #363535;
+  background-image: linear-gradient(to right, rgb(168, 129, 4) 0%, rgba(255, 255, 255, 0) 90%, rgba(255, 255, 255, 0) 100%);
+  background-repeat: no-repeat;
+  background-size: 1% 100%;
+  transition: background-size 0.2s ease-out, box-shadow 0.2s ease-out;
+  border: 2px solid #f8d806;
+  box-shadow: rgba(58, 57, 57, 0.57) 2px 2px 5px;
+  position: relative; /* 父容器设置相对定位 */
+}
+
+.doff:hover {
+  animation: rotate 2s infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
 
 .sidebar {
   top: 0;
