--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -44,7 +44,8 @@
   font-size: 14px;
   border-radius: 10px;
   padding: 5px 10px;
-  width: 70px;
+  width: 80px;
+  text-align: center;
   color: #f8d806;
   cursor: pointer;
   background-color: #363535;
